INTERNAL-21: Enhance styling

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/guarantees/_guarantees.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/guarantees/_guarantees.style.less
@@ -19,11 +19,15 @@
   gap: 24px;
 }
 
+.guarantee p {
+  margin: 0 !important;
+}
+
 .guarantee-icon {
   width: fit-content;
   border-radius: 0.75rem;
   border-width: 1px;
-  border-color: #d4dad2; // Make color dynamic! color-primary-50
+  border-color: #d4dad2;
   padding: 8px;
 }
 
@@ -35,9 +39,10 @@
 }
 
 .guarantee-title {
-  color: #363030; // color-text-500
+  color: #363030;
   font-size: 18px;
   white-space: nowrap;
+  margin: 0 !important;
 }
 
 @media (min-width: 768px) {
