--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
@@ -10,11 +10,11 @@ use Magento\Framework\Escaper;
 /** @var ViewModelRegistry $viewModels */
 ?>
 
-<section class="mb-8" x-data="Address()">
+<section class="mb-7 md:mb-8" x-data="Address()">
     <h2 class="text-text-500 text-lg font-bold mb-5">
         <?= $escaper->escapeHtml(__('Default Addresses')) ?>
     </h2>
-    <div class="grid gap-8 grid-cols-1 md:grid-cols-2">
+    <div class="grid gap-5 md:gap-8 grid-cols-1 md:grid-cols-2">
         <?php if ($customerDefaultBillingAddress = $block->getDefaultBilling()): ?>
             <div class="bg-white p-5 rounded-xl">
                 <h2 class="text-text-500 text-lg font-bold mb-4">
