--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
@@ -41,7 +41,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
         enctype="multipart/form-data"
         data-hasrequired="<?= $escaper->escapeHtmlAttr(__('* Required Fields')) ?>"
     >
-        <div class="bg-white p-5 rounded-xl mb-8">
+        <div class="bg-white p-5 rounded-xl mb-7 md:mb-8">
             <h2 class="text-text-500 text-lg font-bold mb-5">
                 <?= $escaper->escapeHtml(__('Contact Information')) ?>
             </h2>
