--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/items.phtml
@@ -91,10 +91,8 @@ $cols = $block->getData('is_context_shipment') ? 3 : 5;
         <?= $block->getPagerHtml() ?>
     <?php endif ?>
 </div>
-<div class="flex justify-end border-t border-container mt-2">
-    <div class="lg:w-1/3">
-        <div class="grid grid-cols-2 text-right p-2 gap-2">
-            <?= $block->getChildHtml('order_totals') ?>
-        </div>
+<div class="lg:grid grid-cols-4 mt-4 lg:mt-6">
+    <div class="grid col-start-3 col-span-2 grid-cols-2 lg:text-right p-2 gap-2">
+        <?= $block->getChildHtml('order_totals') ?>
     </div>
 </div>
