INTERNAL-17; add margin button to button on desktop screen

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/dashboard/info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/dashboard/info.phtml
@@ -81,7 +81,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
                 <div class="flex gap-3 flex-col md:flex-row">
                     <a
-                        class="button button--outline-primary"
+                        class="button button--outline-primary mb-5 md:mb-0"
                         href="<?= $escaper->escapeUrl($block->getUrl('newsletter/manage')) ?>"
                         aria-label="<?= $escaper->escapeHtml(__('Edit newsletters')) ?>"
                     >
