--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/company.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/company.phtml
@@ -25,7 +25,7 @@ $validationClass = $this->helper(AddressHelper::class)->getAttributeValidationCl
                value="<?= $escaper->escapeHtmlAttr($block->getCompany()) ?>"
                title="<?= $escaper->escapeHtmlAttr(__('Company')) ?>"
                placeholder="<?= $escaper->escapeHtmlAttr(__('Enter your company name')) ?>"
-               class="input__field input__field--outline h-auto px-5 py-[10px]"
+               class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
         >
     </div>
 </div>
