--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/telephone.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/widget/telephone.phtml
@@ -22,7 +22,7 @@ use Magento\Framework\Escaper;
                value="<?= $escaper->escapeHtmlAttr($block->getTelephone()) ?>"
                title="<?= $escaper->escapeHtmlAttr(__('Phone Number')) ?>"
                placeholder="<?= $escaper->escapeHtmlAttr(__('Enter your phone number')) ?>"
-               class="input__field input__field--outline h-auto px-5 py-[10px]"
+               class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
         >
     </div>
 </div>
