--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
@@ -156,7 +156,7 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
                         />
                         <div id="password-strength-meter-container" class="mt-2 text-sm"
                              data-role="password-strength-meter" aria-live="polite">
-                            <div id="password-strength-meter" class="password-strength-meter text-primary-700">
+                            <div id="password-strength-meter" class="password-strength-meter">
                                 <?= $escaper->escapeHtml(__('Password Strength')) ?>:
                                 <span id="password-strength-meter-label" class="lowercase"
                                       data-role="password-strength-meter-label">
