INTERNAL-62 - Fix download icon's styling issue

--- a/app/design/frontend/Satoshi/Hyva/Magento_Downloadable/templates/customer/products/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Downloadable/templates/customer/products/list.phtml
@@ -66,7 +66,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                         <?php if ($item->getStatus() == Item::LINK_STATUS_AVAILABLE): ?>
                             <a
                                 href="<?= $escaper->escapeUrl($block->getDownloadUrl($item)) ?>"
-                                class="inline-block md:mt-2 text-sm underline text-secondary-darker"
+                                class="inline-block md:mt-2 text-sm underline text-secondary-darker max-md:flex max-md:items-center"
                                 id="download_<?= /* @noEscape */ $item->getPurchased()->getProductId() ?>"
                                 title="<?= $escaper->escapeHtmlAttr(__('Start Download')) ?>"
                                 aria-label="<?= $escaper->escapeHtmlAttr(__('Start Download')) ?>"
