Refactor columns grid layout for PLPs

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/banner.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/banner.phtml
@@ -69,6 +69,12 @@ $height = $block->getVar('category_page_category_image/height');
       </div>
       <?php endif; ?>
     </div>
+
+    <!-- Uncomment when hide filters button moved inside sidebar -->
+    <!-- <div
+      class="button button--filled-primary invisible ml-8 hidden w-[275px] min-w-[275px] md:inline-flex md:pl-2"
+    ></div> -->
+    <!-- TODO: Move inside filters sidebar -->
     <div class="ml-8 md:pl-2">
       <button
         type="button"
