--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/search/banner.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/search/banner.phtml
@@ -24,6 +24,11 @@ $title = $block->getLayout()->getBlock('page.main.title')->getPageHeading();
   <div class="flex w-full items-end justify-between">
     <h2 class="text-lg"><?= $escaper->escapeHtml((string)$title) ?></h2>
 
+    <!-- Uncomment when hide filters button moved inside sidebar -->
+    <!-- <div
+      class="button button--filled-primary invisible ml-8 hidden w-[275px] min-w-[275px] md:inline-flex md:pl-2"
+    ></div> -->
+    <!-- TODO: Move inside filters sidebar -->
     <div class="ml-8 md:pl-2">
       <button
         type="button"
