Refactpr recent orders sidebar

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/collapsible.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/collapsible.phtml
@@ -20,7 +20,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         x-ref="AccordionButton"
         type="button"
         :aria-expanded="isExpanded"
-        :disabled="!isMobile"
+        :disabled="!$store.main.isMobile"
     >
         <span class="font-bold">
             <?= $escaper->escapeHtml(__($block->getData('block_title'))) ?>
