--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
@@ -23,7 +23,7 @@ if (! $customer->customerLoggedIn()) {
 
 <div x-data="RecentOrders"
     @private-content-loaded.window="receiveReorderData($event.detail.data)"
-    class="hidden"
+    class="hidden mb-7"
     :class="{ 'hidden': !itemCount }"
     :aria-hidden="!itemCount"
 >
@@ -82,7 +82,7 @@ if (! $customer->customerLoggedIn()) {
             <button
                 type="button"
                 @click.prevent="addToCart('<?= $escaper->escapeUrl($block->getFormActionUrl()) ?>')"
-                class="button button--filled-primary"
+                class="button button--filled-primary max-md:w-full"
                 aria-label="<?= $escaper->escapeHtmlAttr(__('Add to cart selected products from list')) ?>"
                 data-addto="cart"
             >
@@ -90,7 +90,7 @@ if (! $customer->customerLoggedIn()) {
             </button>
         </template>
         <a href="<?= $escaper->escapeUrl($block->getUrl('customer/account')) ?>#recentOrders"
-            class="button button--ghost-primary"
+            class="button button--ghost-primary max-md:w-full max-md:mt-4"
             aria-label="<?= $escaper->escapeHtmlAttr(__('View all recent orders')) ?>"
         >
             <?= $escaper->escapeHtml(__('View All')); ?>
