Sync color contrast changes

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
@@ -82,12 +82,12 @@
 
   --fade-in-bg: #F3F3F3;
 
-  --color-primary-50: #f1f3f0;
-  --color-primary-100: #bcc4b9;
-  --color-primary-400: #94a28f;
-  --color-primary-500: #879681;
-  --color-primary-600: #7a8a73;
-  --color-primary-700: #6e7c68;
+  --color-primary-50: #d4dad2;
+  --color-primary-100: #9eab9b;
+  --color-primary-400: #768872;
+  --color-primary-500: #6a7a66;
+  --color-primary-600: #5e6c5a;
+  --color-primary-700: #525e4f;
 
   --color-background-50: #ffffff;
   --color-background-100: #ffffff;
@@ -100,12 +100,16 @@
   /* On light bg, lighter color is darker */
 
   /* bg_is_darker: false; */
+  --color-primary-800: #6a7a66;
   --color-text-50: #000000;
   --color-text-100: #000000;
-  --color-text-400: #252421;
-  --color-text-500: #32312d;
-  --color-text-600: #3f3e39;
-  --color-text-700: #4d4b45;
+  --color-text-400: #292424;
+  --color-text-500: #363030;
+  --color-text-600: #443c3c;
+  --color-text-700: #514848;
+  --color-overlay: #18181833;
+  --color-overlay-dark: #18181866;
+  --header-shadow: 0 10px 8px rgb(0 0 0 / 0.04);
 
   --color-secondary-50: #ffffff;
   --color-secondary-100: #f6f6f5;
@@ -124,18 +128,17 @@
     /* bg_is_darker: false; */
     --color-text-50: #000000;
     --color-text-100: #000000;
-    --color-text-400: #0a0a09;
-    --color-text-500: #171715;
-    --color-text-600: #252421;
-    --color-text-700: #32312d;
+    --color-text-400: #0e0c0c;
+    --color-text-500: #1b1818;
+    --color-text-600: #292424;
+    --color-text-700: #363030;
 
-    --color-primary-50: #0c0d0b;
-    --color-primary-100: #3d4539;
-    --color-primary-400: #616e5c;
-    --color-primary-500: #6e7c68;
-    --color-primary-600: #7a8a73;
-    --color-primary-700: #879681;
-
+    --color-primary-50: #000000;
+    --color-primary-100: #222720;
+    --color-primary-400: #465043;
+    --color-primary-500: #525e4f;
+    --color-primary-600: #5e6c5a;
+    --color-primary-700: #6a7a66;
   }
 }
 
