--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
@@ -21,7 +21,7 @@ if (! $customer->customerLoggedIn()) {
 
 ?>
 
-<div x-data="RecentOrders"
+<div x-data="RecentOrders('<?= $escaper->escapeJs(__("Cannot add product to cart")) ?>')"
     @private-content-loaded.window="receiveReorderData($event.detail.data)"
     class="hidden mb-7"
     :class="{ 'hidden': !itemCount }"
