--- a/app/design/frontend/Satoshi/Hyva/Magento_Vault/templates/customer_account/credit_card.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Vault/templates/customer_account/credit_card.phtml
@@ -1,9 +1,17 @@
 <?php
+
 use Magento\Framework\View\Element\Template;
 use Magento\Vault\Api\Data\PaymentTokenInterface;
 use Magento\Vault\Block\CardRendererInterface;
+use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\SvgIcons;
+
 
 /** @var CardRendererInterface|Template $block */
+
+/** @var ViewModelRegistry $viewModels */
+
+$hyvaicons = $viewModels->require(SvgIcons::class);
 
 $ccNumberView = $block->escapeHtml($block->getNumberLast4Digits());
 ?>
@@ -12,7 +20,8 @@ $ccNumberView = $block->escapeHtml($block->getNumberLast4Digits());
         <div class="md:hidden font-bold">
             <?= $escaper->escapeHtml(__('Card Number')) ?>
         </div>
-        <span><?= /* @noEscape */ $ccNumberView ?></span>
+        <span><?= /* @noEscape */
+            $ccNumberView ?></span>
     </div>
     <div class="grid grid-cols-2 md:grid-cols-1 mb-4 md:mb-0">
         <div class="md:hidden font-bold">
@@ -24,9 +33,12 @@ $ccNumberView = $block->escapeHtml($block->getNumberLast4Digits());
         <div class="md:hidden font-bold">
             <?= $block->escapeHtml(__('Type')) ?>
         </div>
-        <img src="<?= /* @noEscape */ $block->getIconUrl() ?>"
-             width="<?= /* @noEscape */ $block->getIconWidth() ?>"
-             height="<?= /* @noEscape */ $block->getIconHeight() ?>"
+        <img src="<?= /* @noEscape */
+        $block->getIconUrl() ?>"
+             width="<?= /* @noEscape */
+             $block->getIconWidth() ?>"
+             height="<?= /* @noEscape */
+             $block->getIconHeight() ?>"
              alt="card-icon"
         >
     </div>
@@ -41,11 +53,12 @@ $ccNumberView = $block->escapeHtml($block->getNumberLast4Digits());
         >
             <?= $block->getBlockHtml('formkey') ?>
             <input
-                name="<?= /* @noEscape */ PaymentTokenInterface::PUBLIC_HASH ?>"
-                value="<?= /* @noEscape */ $block->getToken()->getPublicHash() ?>"
+                name="<?= /* @noEscape */
+                PaymentTokenInterface::PUBLIC_HASH ?>"
+                value="<?= /* @noEscape */
+                $block->getToken()->getPublicHash() ?>"
                 type="hidden"/>
             <button type="submit"
-                    class="action delete"
                     data-mage-init='{
                                     "Magento_Vault/js/customer_account/deleteWidget":{
                                         "type": "popup",
@@ -55,7 +68,9 @@ $ccNumberView = $block->escapeHtml($block->getNumberLast4Digits());
                                         "content": "<?= $block->escapeHtml(__('Are you sure you want to delete this card: %1?', $ccNumberView)) ?>"
                                     }
                                 }'>
-                <span><?= $block->escapeHtml(__('Delete')) ?></span>
+                <span>
+                    <?= $hyvaicons->renderHtml('trash', 'text-lg text-primary-700'); ?>
+                </span>
             </button>
         </form>
     </div>
