INTERNAL-17; revert dashboard work, and add checkmark icon

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
@@ -282,7 +282,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                         name="default_billing"
                         value="1">
                     <span class="checkbox__control w-5 h-5" aria-hidden="true">
-                        <?= $hyvaicons->renderHtml('check') ?>
+                        <?= $hyvaicons->renderHtml('checkmark') ?>
                     </span>
                     <span class="checkbox__label text-[14px] ml-0">
                         <?= $escaper->escapeHtml(__('Use as my default billing address')) ?>
@@ -301,7 +301,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                         name="default_shipping"
                         value="1">
                     <span class="checkbox__control w-5 h-5" aria-hidden="true">
-                        <?= $hyvaicons->renderHtml('check') ?>
+                        <?= $hyvaicons->renderHtml('checkmark') ?>
                     </span>
                     <span class="checkbox__label text-[14px] ml-0">
                         <?= $escaper->escapeHtml(__('Use as my default shipping address')) ?>
