--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
@@ -66,7 +66,7 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
                 aria-describedby="change_email_description"
             />
             <span class="checkbox__control w-5 h-5" aria-hidden="true">
-                <?= $hyvaicons->renderHtml('check') ?>
+                <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
             <span class="checkbox__label text-[14px] ml-0"><?= $escaper->escapeHtml(__('Change email')) ?></span>
             <span class="sr-only"
@@ -86,7 +86,7 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
                 aria-describedby="change_password_description"
             />
             <span class="checkbox__control w-5 h-5" aria-hidden="true">
-                <?= $hyvaicons->renderHtml('check') ?>
+                <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
             <span class="checkbox__label text-[14px] ml-0"><?= $escaper->escapeHtml(__('Change password')) ?></span>
             <span class="sr-only"
